<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="player_1">Player 1</string>
    <string name="enter_name">Enter name…</string>
    <string name="player_2">Player 2</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
</resources>